@@ -6,13 +6,13 @@ INCLUDES = $(THEME_METHOD_CFLAGS) \
 
 AM_CFLAGS = -g
 
-bin_PROGRAMS = gnome-theme-thumbnailer
+bin_PROGRAMS = gnome-theme-thumbnailer themus-theme-applier
 
 vfsmoduledir = $(libdir)/gnome-vfs-2.0/modules
 vfsmodule_LTLIBRARIES = libtheme-method.la
 
 bonobodir = $(libdir)/bonobo
-bonobo_LTLIBRARIES = libthemus-theme-properties-view.la libthemus-component.la
+bonobo_LTLIBRARIES = libthemus-theme-properties-view.la
 
 libtheme_method_la_LDFLAGS = -module -avoid-version \
   -export-symbols-regex 'vfs_module_.*'
@@ -25,13 +25,10 @@ gnome_theme_thumbnailer_LDADD = $(THEMUS_THUMBNAILER_LIBS) \
 gnome_theme_thumbnailer_SOURCES = \
 	theme-thumbnailer.c
 
-libthemus_component_la_LIBADD =  $(THEMUS_COMPONENT_LIBS) \
+themus_theme_applier_LDADD = $(THEMUS_COMPONENT_LIBS) \
   $(top_builddir)/capplets/common/libcommon.la
-libthemus_component_la_LDFLAGS = -module -avoid-version
-libthemus_component_la_SOURCES = \
-	themus-component.c \
-	themus-component.h \
-	themus-component-main.c
+themus_theme_applier_SOURCES = \
+	themus-theme-applier.c
 
 libthemus_theme_properties_view_la_LIBADD = $(THEMUS_COMPONENT_LIBS) \
   $(top_builddir)/capplets/common/libcommon.la
@@ -53,17 +50,20 @@ schemasdir       = $(sysconfdir)/gconf/schemas
 schemas_in_files = themus.schemas.in
 schemas_DATA     = $(schemas_in_files:.schemas.in=.schemas)
 
-server_in_files = Themus_Component.server.in.in Themus_Properties_View.server.in.in
+mimeinfodir = $(datadir)/mime-info
+mimeinfo_DATA = themus.keys
+
+appregdir = $(datadir)/application-registry
+appreg_DATA = themus.applications
+
+server_in_files = Themus_Properties_View.server.in.in
 serverdir = $(libdir)/bonobo/servers
 server_DATA = $(server_in_files:.server.in.in=.server)
-
-Themus_Component.server.in: Themus_Component.server.in.in
-	sed -e "s|\@BONOBODIR\@|$(bonobodir)|" $< > $@
 
 Themus_Properties_View.server.in: Themus_Properties_View.server.in.in
 	sed -e "s|\@BONOBODIR\@|$(bonobodir)|" $< > $@
 
-CLEANFILES = Themus_Component.server Themus_Component.server.in Themus_Properties_View.server Themus_Properties_View.server.in
+CLEANFILES = Themus_Properties_View.server Themus_Properties_View.server.in
 
 install-data-local:
 	if test -z "$(DESTDIR)"; then \
@@ -78,7 +78,6 @@ EXTRA_DIST = \
   theme-method.directory.in \
   theme-method.conf \
   themus.schemas.in \
-  Themus_Component.server.in.in \
   Themus_Properties_View.server.in.in \
   ChangeLog
 
