@@ -1,19 +1,0 @@
-<oaf_info>
-
-<oaf_server iid="OAFIID:Themus_Component_Apply"
-	type="shlib" location="@BONOBODIR@/libthemus-component.so">
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:Bonobo/Unknown:1.0"/>
-		<item value="IDL:Bonobo/Listener:1.0"/>
-	</oaf_attribute>
-	<oaf_attribute name="name" type="string" _value="Themus component apply theme operations"/>
-	<oaf_attribute name="description" type="string" _value="Themus component"/>
-	<oaf_attribute name="bonobo:supported_mime_types" type="stringv">
-		<item value="application/x-gnome-theme-installed"/>
-	</oaf_attribute>
-	<oaf_attribute name="nautilus:context_menu_handler" type="boolean" value="true"/>
-	<oaf_attribute name="nautilus:can_handle_multiple_files" type="boolean" value="false"/>
-	<oaf_attribute name="nautilusverb:ApplyTheme" type="string" _value="Apply theme..."/>
-</oaf_server>
-
-</oaf_info>
