@@ -1,2 +1,0 @@
-application/x-theme:
-	ext: theme
