@@ -1,3 +1,9 @@
+2003-07-21  Andrew Sobala  <aes@gnome.org>
+
+	As per comments on Usability@gnome.org:
+	* Removed "Apply theme" context menu item
+	* Made themes apply when you click on them instead
+
 2003-07-20  Andrew Sobala  <aes@gnome.org>
 
 	* themus-component.c: (impl_Bonobo_Listener_event): apply
